@@ -56,8 +56,10 @@ advanced/recent_episode_count = The number of most recent episodes to download.
     0 to download all recent episodes.
 advanced/minimum_free_space = The minimum amount of diskspace that must be free
     to start a new download. Use any number less than 0 to disable.
-advanced/filter_explicit = should explicit episodes be downloaded? 0 for
+advanced/filter_explicit = Should explicit episodes be downloaded? 0 for
     download all including explicit. 1 for do not download explicit.
+network/ignore_not_modified = Should the servers 304 not modified response be
+    ignored. 1 to ignore.
 
 
 *** Podcasts Listing File
